--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "nitropack": "latest"
   },
   "dependencies": {
-    "openai": "^4.69.0"
+    "jose": "^5.9.6",
+    "openai": "^4.69.0",
+    "uuid": "^11.0.3"
   }
 }
