--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "nitropack": "latest"
   },
   "dependencies": {
+    "cidr-matcher": "^2.1.1",
     "db": "^6.0.3",
     "dotenv": "^16.4.7",
     "h3": "^1.13.0",
