--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "nitro": "^0.0.0",
     "openai": "^4.76.3",
     "serverless-mysql": "^1.5.5",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "axios": "^1.4.0",
+    "fs-extra": "^11.1.1",
+    "path": "^0.12.7"
   }
 }
